[temp-maybe] fixed width this is not responsive, at all

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -3,6 +3,8 @@
 		display: grid;
 		grid-template-columns: 40px repeat(7, 1fr);
 		grid-template-rows: 24px repeat(24, 60px);
+		width: 1200px;
+		margin: auto;
 
 		.calendar-day {
 			border-bottom: 1px solid lightgray;
